# diff-dae-events

./: .gitignore  BENCHMARK_README.md  OPTIMIZATION_SUMMARY.md  README.md  README_DAE_SOLVER.md  analyze_benchmarks.py  benchmark_krylov.py  benchmark_optimizers.py  compare_gradients_pytorch_adjoint.py  debug_dae_solver.py  debug_output_bench.txt  debug_output_bench_seg.txt  example_adjoint_solver.py  example_augmented_lagrangian_v3.py  example_augmented_lagrangian_v4.py  example_augmented_lagrangian_v5.py  example_diffrax_bouncing_ball.py  example_explicit_adjoint_bouncing_ball.py  example_implicit_adjoint_bouncing_ball.py  example_implicit_adjoint_bouncing_ball_orig.py  example_implicit_adjoint_bouncing_ball_user_fix.py  example_matrix_bouncing_ball.py  example_optimizer.py  example_optimizer_deer.py  example_optimizer_deer_methods.py  example_optimizer_deer_methods_scan.py  example_optimizer_fast.py  example_optimizer_jax.py  example_optimizer_jax_ad.py  example_optimizer_jax_ad_deer_solver.py  example_optimizer_krylov.py  example_optimizer_optimized.py  example_optimizer_parallel.py  example_optimizer_parallel_optimized.py  example_optimizer_parallel_v2_true_bdf.py  example_optimizer_parallel_v2_true_bdf_optimized.py  example_padded_bouncing_ball.py  example_padded_corrected_bouncing_ball.py  example_pytorch_bouncing_ball.py  example_vectorized.py  (+21 more)
.claude/: CLAUDE.md
config/: benchmark_config.yaml  config_bouncing_ball.yaml  config_bouncing_balls.yaml  config_bouncing_balls_N15.yaml  config_bouncing_balls_N3.yaml  config_bouncing_balls_N7.yaml  config_cauer.yaml  (+3 more)
(+286 files in other folders)
